@@ -35,6 +35,10 @@ version 2.77
 	    is destroyed and recreated in the kernel. Thanks to 
 	    Beniamino Galvani for the patch.
 
+	    Allow wildcard CNAME records in authoritative zones.
+	    For example --cname=*.example.com,default.example.com
+	    Thanks to Pro Backup for sponsoring this development.
+
 
 version 2.76
             Include 0.0.0.0/8 in DNS rebind checks. This range 
